Fix issue with navbar on small screen

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,3 +9,21 @@
 .mr-10 {
   margin-right: 10%;
 }
+
+.menu {
+  display: none;
+}
+
+.small-menu {
+  display: flex;
+}
+
+@media screen and (min-width: 991px) {
+  .menu {
+    display: flex;
+  }
+
+  .small-menu {
+    display: none;
+  }
+}
